k8s/demo-comm-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-communication
  labels:
    app: demo-communication
