k8s/demo-comm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-communication
  name: demo-comm-ws-deploy
  labels:
    app: demo-comm-ws-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-comm-ws-con
  strategy:
    type: RollingUpdate
  template:
    metadata:
      name: demo-comm-ws-con
      labels:
        app: demo-comm-ws-con
    spec:
      restartPolicy: Always
#      activeDeadlineSeconds: 300 # only for Pod config
      volumes:
        - name: demo-comm-vol
          persistentVolumeClaim:
            claimName: demo-comm-pvc
      containers:
        - name: demo-comm-ws-con
          image: openjdk:21-ea-jdk-slim
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "192Mi"
              cpu: "0.1"
            limits:
              memory: "192Mi"
              cpu: "0.3"
          volumeMounts:
            - mountPath: /mnt/data
              name: demo-comm-vol
          ports:
            - containerPort: 18080
              protocol: TCP
          workingDir: /mnt/data/java
#          command: ["tail", "-f", "/dev/null"]
          command: ["java", "-jar", "-Xms128m", "-Xmx128m", "demo-communication-ws-test-1.0.0.jar"]
#          startupProbe:
#            httpGet:
#              path: /healthz
#              port: 5000
#              exec:
#                command: ["date"]
#              initialDelaySeconds: 15
#              periodSeconds: 15
#              failureThreshold: 3
#          livenessProbe:
#            httpGet:
#              port: 18080
#              path: /healthz
#            initialDelaySeconds: 10 # wait before start checking
#            periodSeconds: 15
#            failureThreshold: 3
#          readinessProbe:
#            httpGet:
#              path: /ready
#              port: 8080
#            initialDelaySeconds: 5
#            periodSeconds: 10
