k8s/test-po.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: demo-communication
  name: busybox-volume-test
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: test-volume
          mountPath: /mnt/data
  volumes:
    - name: test-volume
      persistentVolumeClaim:
        claimName: test-pvc
