k8s/test-db-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: test-db-ep
subsets:
  - addresses:
      - ip: "192.168.64.1"
        hostname: host-db
    ports:
      - port: 5432
